# wass

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  justfile
.github/: settings.yml
.github/workflows/: ci.yml  publish-validation.yml  publish.yml
benches/: sinkhorn_bench.rs
examples/: README.md  barycenter_morph.rs  color_transfer.rs  document_alignment_demo.rs  document_distance.rs  graph_kernel.rs  gromov_wasserstein_graph_match.rs  noisy_ocr_matching.rs  ot_clustering.rs  ot_validation.rs  point_cloud_registration.rs  sinkhorn_divergence_same_support.rs  sparse_vs_sinkhorn.rs  unbalanced_outlier_tradeoff.rs  unbalanced_sinkhorn_mass_mismatch.rs
examples/common/: mod.rs  textish.rs
src/: barycenter.rs  flow.rs  gaussian.rs  gromov.rs  lib.rs  semidiscrete.rs  sparse.rs  wfr.rs
tests/: noisy_ocr_expected_matches_e2e.rs  rosetta_wass.rs  sinkhorn_divergence_convexity_e2e.rs  sinkhorn_divergence_cost_shift_invariant_e2e.rs  sinkhorn_divergence_e2e.rs  sinkhorn_divergence_gaussian_shift_e2e.rs  sinkhorn_divergence_general_e2e.rs  sinkhorn_log_zeros_e2e.rs  unbalanced_divergence_symmetry_e2e.rs  unbalanced_divergence_zero_diagonal_sparse_e2e.rs  unbalanced_outlier_tradeoff_e2e.rs  unbalanced_plan_mass_monotone_in_rho_e2e.rs  unbalanced_sinkhorn_e2e.rs
tests/fixtures/rosetta/: gen_wass.py  wass_sinkhorn.json
