[package]
name = "wass"
version = "0.1.0"
authors = ["Arc <attobop@gmail.com>"]
edition = "2021"
description = "Optimal transport: Wasserstein distance, Sinkhorn algorithm, and Sinkhorn divergence"
license = "MIT OR Apache-2.0"
repository = "https://github.com/arclabs561/wass"
homepage = "https://github.com/arclabs561/wass"
documentation = "https://docs.rs/wass"
keywords = ["optimal-transport", "wasserstein", "sinkhorn", "divergence"]
categories = ["algorithms", "science", "mathematics"]

[dependencies]
thiserror = "2.0"
ndarray = "0.16"
rand = "0.8"
rand_chacha = "0.3"
rand_distr = "0.4"
innr = { path = "../innr", version = "0.1.0", optional = true }

[dev-dependencies]
proptest = "1.5"

[features]
default = []
simd = ["dep:innr"]
