[package]
name = "wass"
version = "0.1.5"
authors = ["Arc <attobop@gmail.com>"]
edition = "2021"
description = "Optimal transport: Wasserstein distance, Sinkhorn algorithm, and Sinkhorn divergence"
license = "MIT OR Apache-2.0"
repository = "https://github.com/arclabs561/wass"
homepage = "https://github.com/arclabs561/wass"
documentation = "https://docs.rs/wass"
keywords = ["optimal-transport", "wasserstein", "sinkhorn", "divergence"]
categories = ["algorithms", "science", "mathematics"]

[dependencies]
thiserror = "2.0"
ndarray = "0.16"
rand = "0.9"
rand_chacha = "0.9"
rand_distr = "0.5"
innr = { version = "0.1.8", optional = true }

[dev-dependencies]
proptest = "1.5"
clump = "0.4"
symproj = "0.1"
slabs = "0.1"

[features]
default = []
simd = ["dep:innr"]
